Native compilation